fix(masthead): add z-index 0

--- a/packages/styles/scss/components/masthead/_masthead.scss
+++ b/packages/styles/scss/components/masthead/_masthead.scss
@@ -266,6 +266,10 @@ $search-transition-timing: 95ms;
   }
 
   .#{$prefix}--header__nav {
+    li {
+      z-index: 0;
+    }
+
     a.#{$prefix}--header__menu-item {
       @include masthead-top-nav-link;
     }
